# fastapi-project-template

./: Makefile  README.md  pyproject.toml  setup.cfg
docs/: openapi.yaml
src/: main.py  test_handler.py
